--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,9 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.coolweather.android"
-        minSdkVersion 26
+        minSdkVersion 24
+
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -26,8 +28,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation  'com.android.support:appcompat-v7:28.2.1'
-    implementation  'org.litepal.android:core:1.4.1'
+    implementation  'com.android.support:appcompat-v7:28.0.0+'
+       implementation  'org.litepal.android:core:1.3.2'
     implementation  'com.squareup.okhttp3:okhttp:3.4.1'
     implementation  'com.google.code.gson:gson:2.7'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
