--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,8 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+KEY_PATH=C\:/myAPKsignFiles/mySign.jks
+KEY_PASS=323846aa
+ALIAS_NAME=gaoqidev
+ALIAS_PASS=323846aa
 
